# OpenGL-2nd_assignment

./: .gitignore  .gitignore.txt  CMakeLists.txt  HW-model.fs  Mesh.h  Model.h  Shader.h  SolarSystem.sln  Sphere.h  lighting.fs  main.cpp  shader.txt  unlit.fs
Libraries/additional/: mesh.h  model.h
Libraries/glfw-3.4/include/GLFW/glad/: glad.h
SolarSystem/: Cube.h  Polygon.h  SolarSystem.vcxproj  SolarSystem.vcxproj.filters  camera.h  main.cpp  model.fs  model.h
SolarSystem/Debug/: vc143.idb
SolarSystem/Debug/SolarSystem.tlog/: SolarSystem.lastbuildstate
SolarSystem/x64/Debug/: SolarSystem.exe.recipe
SolarSystem/x64/Debug/SolarSystem.tlog/: SolarSystem.lastbuildstate
lib/Assimp/include/assimp/: revision.h
